# Mnemosyne

./: .gitignore  AGENTS.md  LICENSE  MEMORY.md  README.md  VISION.md  mnemosyne.py  opencode.json  pyproject.toml
.backlog/: AGENTS.md  PORE.md  README.md
.backlog/ACTIVE/2026/: TRACK_015_ACTIVE_consent_gated_memory_revision.md
.opencode/agents/: mnemosyne.md
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  GETTING_STARTED.md  GLOSSARY.md  MANUAL.md  MNEMOSYNE_VISION.md
mnemosyne/: __init__.py  app.py  cli.py  settings.py
mnemosyne/mcp/: AGENTS.md  messages.py  methods.py  protocol.py  tools.py
mnemosyne/mcp/tools/: __init__.py  (+6 more)
mnemosyne/memory/: __init__.py  errors.py  listing.py  normalization.py  paths.py  policy.py  records.py  retrieval.py  scopes.py  service.py  store.py
mnemosyne/routes/: AGENTS.md  mcp.py  version.py
mymcp/: __init__.py  app.py  cli.py  settings.py
mymcp/mcp/: AGENTS.md  composition.py  methods.py  startup.py  tool_arguments.py  tool_registry.py
mymcp/memory/: __init__.py  errors.py  listing.py  normalization.py  paths.py  policy.py  records.py  retrieval.py  scopes.py  service.py  store.py
mymcp/mnemosyne/: __init__.py  configuration.py
mymcp/routes/: AGENTS.md  mcp.py  version.py
tests/: README.md  test_cli.py  test_mnemosyne_configuration.py  test_opencode_config.py  test_project_identity.py  test_settings.py  test_test_foundation.py
tests/mcp/: test_integration_composition.py  test_list_tools.py  test_memory_archive.py  test_memory_forget.py  test_memory_inspect.py  test_memory_list.py  test_memory_recall.py  test_memory_remember.py  test_memory_restore.py  test_memory_retrieval.py  test_memory_revise.py  test_messages.py  test_methods.py  test_mnemosyne_integration.py  test_protocol.py  test_registry.py  test_startup_settings.py  test_tool_arguments.py  test_tool_registry.py
tests/memory/: test_import_boundaries.py  test_listing.py  test_normalization.py  test_paths.py  test_policy.py  test_records.py  test_retrieval.py  test_scopes.py  test_service.py  test_store.py  test_store_mutations.py
tests/routes/: test_mcp.py  test_operational.py
(+90 files in other folders)
