[project]
name = "mnemosyne"
version = "0.1.0"
description = "Local-first MCP server for AI agent memory, awareness, reflection, and user-governed context."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Kosta Gerodimos" }
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
test = [
  "pytest",
  "httpx2",
]

[project.scripts]
mnemosyne = "mnemosyne.cli:main"
mnemosyne-dev = "mnemosyne.cli:dev"
mnemosyne-test = "mnemosyne.cli:test"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
